# selective-search

./: readme.md
segmentation_parallel/: Boruvka.cpp  CMakeLists.txt  graph.cpp  graph.h  main.cpp  selective.cpp  selective.h
segmentation_sequential/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
